# src/controllers/user/validation.go
@@ -6,11 +6,13 @@ import (
 )
 
 var checkBodySignUp = validation.IsValid("body", validation.MustBe{
-	"username":  types.String{Required: true, Min: 1},
-	"firstName": types.String{Required: true, Min: 1},
-	"lastName":  types.String{Required: true, Min: 1},
-	"password":  types.String{Required: true, Min: 6, Max: 10},
+	"username":  types.String{Min: 1},
+	"firstName": types.String{Min: 1},
+	"lastName":  types.String{Min: 1},
+	"password":  types.String{Min: 6, Max: 10},
 })
+
+var checkParamsUserID = validation.IsValid("params", validation.MustBe{"userID": types.Number{}})
 
 var checkBodyUpdate = validation.IsValid("body", validation.MustBeOneOf{
 	"username":  types.String{Min: 1},
